tests/testfiles/passing/invalid_identifiers/keyword_as_id_volatile.c
/* Keyword as identifier: volatile */
int main() {
    int volatile;
    volatile = 2;
}